--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME="Bank Sampah Management System"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:ghtotJ8tq7hDL0yfJwvUnELxZs0gWo531NVqzQLNL4w=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
+APP_TIMEZONE=Asia/Jakarta
 APP_URL=http://localhost
 
 APP_LOCALE=en
@@ -19,12 +19,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=banksampah
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=kevinchr.com
+DB_PORT=3306
+DB_DATABASE=u1652679_bank_sampah_management_system
+DB_USERNAME=u1652679_admin-bsms
+DB_PASSWORD=Admin-0321
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
